--- a/6_obsession/index.html
+++ b/6_obsession/index.html
@@ -24,7 +24,7 @@
 		<div><a href="page5.html">For The Emperor</a></div>
 		<div><a href="page6.html">Handmaiden</a></div>
 		<div><a href="page7.html">I Saw <br> The Devil</a></div>
-		<div><a href="page8.html">Memories <br> Of Mother</a></div>
+		<div><a href="page8.html">Memories <br> Of Murder</a></div>
 	</div>
 
 	<div class="flex-container">
