--- a/6_obsession/page10.html
+++ b/6_obsession/page10.html
@@ -14,7 +14,7 @@
 	<div class="movietitle">Miss Granny </div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/10_1_MissGranny.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/10_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
