--- a/6_obsession/page12.html
+++ b/6_obsession/page12.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Oasis</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/12_1_Oasis.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/12_4.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
