--- a/6_obsession/page13.html
+++ b/6_obsession/page13.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Obsessed</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/13_1_Obsessed.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/13_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
