--- a/6_obsession/page14.html
+++ b/6_obsession/page14.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Ode To My Father</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/14_1_OdeToMyFather.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/14_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
