--- a/6_obsession/page15.html
+++ b/6_obsession/page15.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Office</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/15_1_Office.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/15_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
