--- a/6_obsession/page18.html
+++ b/6_obsession/page18.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Sector 7</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/18_1_Sector7.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/18_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
