--- a/6_obsession/page22.html
+++ b/6_obsession/page22.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Concubine</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/22_1_TheConcubine.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/22_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
