--- a/6_obsession/page23.html
+++ b/6_obsession/page23.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Front Line</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/23_1_TheFrontLine.png" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/23_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
