--- a/6_obsession/page25.html
+++ b/6_obsession/page25.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Himalayas</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/25_1_TheHimalayas.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/25_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
