--- a/6_obsession/page30.html
+++ b/6_obsession/page30.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Terror Live</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/30_1_TheTerrorLive.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/30_4.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
