--- a/6_obsession/page31.html
+++ b/6_obsession/page31.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Thieves</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/31_1_TheThieves.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/31_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
