--- a/6_obsession/page34.html
+++ b/6_obsession/page34.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Thirst</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/34_1_Thirst.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/34_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
