--- a/6_obsession/page35.html
+++ b/6_obsession/page35.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Tower</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/35_1_Tower.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/35_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
