--- a/6_obsession/page36.html
+++ b/6_obsession/page36.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Tunnel</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/36_1_Tunnel.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/36_4.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
