--- a/6_obsession/page4.html
+++ b/6_obsession/page4.html
@@ -13,7 +13,7 @@
 		<div class="movietitle"> Flu </div>
 
 		<div class="centeredposter"> 
-			<p style="text-align: center;"> <img src="assets/imgs/4_1_Flu.jpg" alt="Korean Version" style="width: 50%;"> </p>
+			<p style="text-align: center;"> <img src="assets/imgs/4_3.png" alt="Korean Version" style="width: 50%;"> </p>
 		</div>
 
 		<br>
