--- a/6_obsession/page7.html
+++ b/6_obsession/page7.html
@@ -14,7 +14,7 @@
 		<div class="movietitle"> I Saw The Devil </div>
 
 		<div class="centeredposter"> 
-			<p style="text-align: center;"> <img src="assets/imgs/7_1_ISawTheDevil.jpg" alt="Korean Version" style="width: 50%;"> </p>
+			<p style="text-align: center;"> <img src="assets/imgs/7_3.png" alt="Korean Version" style="width: 50%;"> </p>
 		</div>
 
 		<br>
