--- a/6_obsession/page8.html
+++ b/6_obsession/page8.html
@@ -14,7 +14,7 @@
 		<div class="movietitle"> Memories of Murder </div>
 
 		<div class="centeredposter"> 
-			<p style="text-align: center;"> <img src="assets/imgs/8_1_MemoriesOfMurder.jpg" alt="Korean Version" style="width: 50%;"> </p>
+			<p style="text-align: center;"> <img src="assets/imgs/8_3.png" alt="Korean Version" style="width: 50%;"> </p>
 		</div>
 
 		<br>
