--- a/6_obsession/page9.html
+++ b/6_obsession/page9.html
@@ -14,7 +14,7 @@
 		<div class="movietitle"> Miracle In Cell No.7</div>
 
 		<div class="centeredposter"> 
-			<p style="text-align: center;"> <img src="assets/imgs/9_1_MiracleInCellNo7.jpg" alt="Korean Version" style="width: 50%;"> </p>
+			<p style="text-align: center;"> <img src="assets/imgs/9_3.png" alt="Korean Version" style="width: 50%;"> </p>
 		</div>
 
 		<br>
