--- a/6_obsession/page11.html
+++ b/6_obsession/page11.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Mother</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/11_1_Mother.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/11_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
