--- a/6_obsession/page16.html
+++ b/6_obsession/page16.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Oldboy</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/16_1_Oldboy.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/16_5.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
