--- a/6_obsession/page17.html
+++ b/6_obsession/page17.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Poetry</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/17_1_Poetry.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/17_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
