--- a/6_obsession/page19.html
+++ b/6_obsession/page19.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Seopyonje</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/19_1_ Seopyonje.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/19_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
