--- a/6_obsession/page21.html
+++ b/6_obsession/page21.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Classified File</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/21_1_TheClassifiedFile.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/21_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
