--- a/6_obsession/page24.html
+++ b/6_obsession/page24.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Good The Bad The Weird</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/24_1_TheGoodTheBadTheWeird.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/24_4.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
