--- a/6_obsession/page26.html
+++ b/6_obsession/page26.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Host</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/26_1_TheHost.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/26_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
