--- a/6_obsession/page27.html
+++ b/6_obsession/page27.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Housemaid</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/27_1_TheHousemaid.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/27_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
