--- a/6_obsession/page28.html
+++ b/6_obsession/page28.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Priests</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/28_1_ThePriests.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/28_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
