--- a/6_obsession/page29.html
+++ b/6_obsession/page29.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Taste Of Money</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/29_1_TheTasteOfMoney.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/29_5.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
