--- a/6_obsession/page3.html
+++ b/6_obsession/page3.html
@@ -13,7 +13,7 @@
 		<div class="movietitle"> Coinlocker Girl </div>
 
 		<div class="centeredposter"> 
-			<p style="text-align: center;"> <img src="assets/imgs/3_1_CoinlockerGirl.jpg" alt="Korean Version" style="width: 50%;"> </p>
+			<p style="text-align: center;"> <img src="assets/imgs/3_3.png" alt="Korean Version" style="width: 50%;"> </p>
 		</div>
 
 		<br>
