--- a/6_obsession/page32.html
+++ b/6_obsession/page32.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Unjust</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/32_1_TheUnjust.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/32_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
