--- a/6_obsession/page33.html
+++ b/6_obsession/page33.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">The Wailing</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/33_1_TheWailing.jpeg" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/33_3.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
