--- a/6_obsession/page6.html
+++ b/6_obsession/page6.html
@@ -13,7 +13,7 @@
 		<div class="movietitle">Handmaiden</div>
 
 		<div class="centeredposter"> 
-			<p style="text-align: center;"> <img src="assets/imgs/6_1_Handmaiden.jpg" alt="Korean Version" style="width: 50%;"> </p>
+			<p style="text-align: center;"> <img src="assets/imgs/6_3.png" alt="Korean Version" style="width: 50%;"> </p>
 		</div>
 
 		<br>
