--- a/3_personal-journey-archive/index.html
+++ b/3_personal-journey-archive/index.html
@@ -9,7 +9,7 @@
 	<h1> PEEP @ </h1>
 
 	<a href="https://seowxx.github.io/2_personaljourney/index.html"> SEOWON'S ATO </a>  –––––
-	<a href="https://leej312.github.io/Project_Lab/Personal Journey/index.html"> JAHYUN'S STEPS OF SHOWER </a> –––––
+	<a href="https://leej312.github.io/lab/Personal Journey/index.html"> JAHYUN'S STEPS OF SHOWER </a> –––––
 	<a href="https://kims889.github.io/personaljourney/index.html"> SOYEON'S TRIP TO EUROPE </a> –––––
 	<a href="https://chikh538.github.io/personal journey/index.html"> KRISTEN'S JOURNEY TO PARSONS </a> –––––
 	<a href="https://funge549.github.io/personal-journey/index.html"> EVELIN'S LONG JOURNEY </a> –––––
