--- a/5_coding-from-life-archive/index.html
+++ b/5_coding-from-life-archive/index.html
@@ -9,34 +9,40 @@
 	<h1> CFL ARCHIVE </h1>
 	
 	<div class="links">
+		<a href="https://chikh538.github.io/code-from-life/index.html" style="color: white; text-decoration: none;">KRISTEN CHIK</a>
+		<br>
 		<a href="https://garcv701.github.io/coding-from-life/index.html" style="color: white; text-decoration: none;">VINCENT GARCIA</a>
 		<br>
 		<a href="https://yangmaya.github.io/coding-from-life/index.html" style="color: white; text-decoration: none;">YANGCHEN GRUBEN</a>
 		<br>
 		<a href="https://esragumrukculer.github.io/coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;">ESRA GUMRUKCULER</a>
 		<br>
-		<a href="https://kayaa946.github.io/sketch-2/index.html" style="color: white; text-decoration: none;"> YAREN KAYA</a>
+		<a href="https://shutingguo.github.io/coding-from-life/index.html" style="color: white; text-decoration: none;">SHUTING GUO</a>
 		<br>
-		<a href="https://kims889.github.io/coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;"> SOYEON KIM</a>
+		<a href="https://khalp570.github.io/coding from life/index.html" style="color: white; text-decoration: none;">PRITHI KALIQUE</a>
 		<br>
-		<a href="https://seowxx.github.io/4_coding-from-life/index.html" style="color:white; text-decoration: none;"> SEOWON KIM</a>
+		<a href="https://kayaa946.github.io/sketch-2/index.html" style="color: white; text-decoration: none;">YAREN KAYA</a>
 		<br>
-		<a href="https://leej312.github.io/Project_Lab/coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;">JAHYUN LEE</a>
+		<a href="https://kims889.github.io/coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;">SOYEON KIM</a>
 		<br>
-		<a href="https://lie771.github.io/coding-from-life/index.html" style="color: white; text-decoration: none;"> EMILY LI</a>
+		<a href="https://seowxx.github.io/4_coding-from-life/index.html" style="color:white; text-decoration: none;">SEOWON KIM</a>
 		<br>
-		<a href="https://kmpnguyen0.github.io/coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;"> KHE NGUYEN</a>
+		<a href="https://leej312.github.io/lab/coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;">JAHYUN LEE</a>
 		<br>
-		<a href="https://privv824.github.io/coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;"> VINCENT PRIVITERA</a>
+		<a href="https://lie771.github.io/coding-from-life/index.html" style="color: white; text-decoration: none;">EMILY LI</a>
 		<br>
-		<a href="https://walde906.github.io/coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;"> EMIL WALDRON</a>
+		<a href="https://kmpnguyen0.github.io/Lab/coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;">KHE NGUYEN</a>
 		<br>
-		<a href="https://funge549.github.io/coding-from-life/index.html" style="color: white; text-decoration: none;"> EVELIN ZHONG</a>
+		<a href="https://privv824.github.io/coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;">VINCENT PRIVITERA</a>
+		<br>
+		<a href="https://walde906.github.io/coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;">EMIL WALDRON</a>
+		<br>
+		<a href="https://funge549.github.io/coding-from-life/index.html" style="color: white; text-decoration: none;">EVELIN ZHONG</a>
+		<br>
+		<br>
 		<br>
 
 	</div>
-	
-	<p> KRISTEN CHIK / SHUTING GUO / PRITHI KHALIQUE's works are currently not available </p>
 
 	<div class="button"> <a href="about.html" class="click" style="font-family: futura; color: black; text-decoration: none;"> ? </div>
 
