--- a/6_obsession/page1.html
+++ b/6_obsession/page1.html
@@ -41,7 +41,7 @@
 			</p>
 			<br>
 			<h3 class="bold"> Posters </h3>
-			<p class="regular"> The Korean version  </p>
+			<p class="regular"> The Korean version of the poster focuses on the main actor to advertise the movie. The title of the movie is written in bold yellow brushstrokes. The image of exhausted looking men implies action and the rough plot of the movie. Unlike the Korean version of the poster, the US version is dark and gloomy. The cloudy background, crows, typeface that reminds me of horror film, two men with a gun, and a car with the trunk open, all add to hint the conflict and action in the movie. Having watched the movie, I choose the Korean version of the poster as the better one, because it is more accurately representing the mood and plot of the movie.</p>
 		</div>
 
 		<div class="next">
