--- a/6_obsession/page10.html
+++ b/6_obsession/page10.html
@@ -42,7 +42,7 @@
 		</p>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster is using an image of a grandma and a young girl holding hands together. They are wearing the same outfit and have same hairstyle to hint about the plot. The text on the center reads, "What year do you want to go back?" The Japanese version of the poster focuses on the younger girl and have read background. On the top, there is an image of grandma who appears to be reminiscing in front of the framed photos. One of the photos have the image of the young girl who is dressed the same with the girl in the poster. The Korean version is more successful at making the contrast more obvious to the audience, while Japanese poster might be too subtle to hint the plot. </p>
 	</div>
 
 	<div class="next">
