--- a/6_obsession/page11.html
+++ b/6_obsession/page11.html
@@ -41,7 +41,7 @@
 		</p>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster shows an image of a son hiding behind his mother. The son appears to be afraid while the mother appears to be audacious. The text on the center of the poster reads, "Don't trust anyone, mommy will save you." The US version of the poster contains an image of the mother who appears to be determined. Only the color red is emphasized on the poster, and there is a shilouette of mother inside the movie title "Mother". The shilouette breaks the alphabet "O", and makes it look like a "Muther" which implies murder. I think the US version is more successful, because it is only focusing on the mother, showing her determination and power of a mother through the image and the texts.  </p>
 	</div>
 
 	<div class="next">
