--- a/6_obsession/page12.html
+++ b/6_obsession/page12.html
@@ -42,7 +42,7 @@
 		</p>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster has an image of a couple kissing. There is a woman in a foreign traditional costume, a baby elephant, and a child around the couple that makes viewers curious of the situation. The vertical text on the center of the poster reads, "I want to get up and sing to you. I want to run and kiss you. I want to jump and love you." The typography used for the title looks like a ink run, adding sentimental value to it. The Japanese version is more simple with the title on the top, and an image of couple sitting next to each other looking directly at the camera. It is maybe too simple to intrigue the audience. The US version of the poster has an image of the couple kissing on a utopian land. It is hard to see why the specific typography is used for the title, because it reminds me of some animated movie. Overall, the Korean poster is the best one that both portrays the plot of the movie, and intrigues the audience.  </p>
 	</div>
 
 	<div class="next">
