--- a/6_obsession/page13.html
+++ b/6_obsession/page13.html
@@ -44,7 +44,7 @@
 		</p>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster has an image of a man grabbing should of a woman with a scar on her neck. Their face expression is intense. The vertical text on the center of the poster reads, "I will go crazy if I don't see you." Without the text, it is hard to tell whether they are a couple or an enemy because of the image. The Japanese version of the poster show two images of the couple kissing, and drawing of roses next to the title. The Japanese version is more successful at clearly showing the relationship between the man and woman, and depicting the romantic yet serious mood of the movie. </p>
 	</div>
 
 	<div class="next">
