--- a/6_obsession/page14.html
+++ b/6_obsession/page14.html
@@ -41,7 +41,7 @@
 		</p>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster shows an image of a happy family on a snowy day. The poster is not showing any sign of war but a smiling family. The US version of the poster features an image of a troop of armies on the bottom that shows the setting of the movie. There is an image of the father holding the shoulder of his son as if he is making a promise that he will come back. The US version of the poster is better than Korean one, because it is showing the setting and focusing on the story of a father and his son. </p>
 	</div>
 
 	<div class="next">
