--- a/6_obsession/page15.html
+++ b/6_obsession/page15.html
@@ -41,7 +41,7 @@
 		</p>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster is divided into top and bottom. The image of the main actor is on the top with the text that reads, "What are you guys hiding!" The image of the actress is on the bottom with the text that reads, "He is still at the office." The US version of the poster appears to be a footage from a security camera. It is interesting that the typography used for Korean version and US version are almost the same except the language. The US version is better at making the audience to expect a story that involves crime because of the smart use of an image of a blurry shot of recorded video. </p>
 	</div>
 
 	<div class="next">
