--- a/6_obsession/page16.html
+++ b/6_obsession/page16.html
@@ -41,7 +41,16 @@
 		</p>
 		<br>
 		<h3 class="bold"> Posters </h3>
-		<p class="regular"> The Korean version  </p>
+		<p class="regular"> The Korean version of the poster has the images of two men. On the right side, there is a man well dressed with the text "Are you ready" written beside him. On the left side, there is a man who looks shabby and exhuasted with the text "I've waited too long" written beside him. It is a simple poster implying the conflict that occurs in the movie. 
+		<br>
+		<br>
+		The US version of the poster has a background of a street in Korea filled with neon signs. The title is also designed to resemble a neon sign. There is a man and a woman walking forward in the center of the poster. The poster shows the three awards that the movie received, and a quote that says "A brilliant masterpiece" to promote the movie abroad. 
+		<br>
+		<br>
+		The Spanish version of the poster is using black and green. The shabby looking man is holding a hammer as if he is about to hit on something or someone. This poster is misleading, because might lead the audience to think that he might be a killer. This poster also contains the award received on the left upper corner. 
+		<br>
+		<br>
+		Overall, the US version of the poster is doing a great job at showing the setting of the movie. Neither the Korean or Spanish version features the image of the woman. Having seen the movie, it is reasonable to include the image of the woman who appears to be trusting and following the man. </p>
 	</div>
 
 	<div class="next">
