--- a/6_obsession/page17.html
+++ b/6_obsession/page17.html
@@ -13,7 +13,7 @@
 	<div class="movietitle">Poetry</div>
 
 	<div class="centeredposter"> 
-		<p style="text-align: center;"> <img src="assets/imgs/17_3.png" alt="Korean Version" style="width: 50%;"> </p>
+		<p style="text-align: center;"> <img src="assets/imgs/17_5.png" alt="Korean Version" style="width: 50%;"> </p>
 	</div>
 
 	<br>
@@ -22,6 +22,10 @@
 	<div class="flex">
 		<img class="poster margin" src="assets/imgs/17_1_Poetry.jpg" alt="Korean Version"> 
 		<img class="poster" src="assets/imgs/17_2.jpg" alt="Foriegn Version"> 
+	</div>
+	<div class="flex two">
+		<img class="poster margin" src="assets/imgs/17_3_spanish.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/17_4_uk.jpeg" alt="Foriegn Version"> 
 	</div>
 	<br>
 	<br>
