--- a/6_obsession/page2.html
+++ b/6_obsession/page2.html
@@ -45,7 +45,7 @@
 			</p>
 			<br>
 			<h3 class="bold"> Posters </h3>
-			<p class="regular"> The Korean version  </p>
+			<p class="regular"> The Korean version of the poster is known as one of the most unsuccessful movie posters in Korea. It failed to capture the actual mood of the movie, and rather made the movie's genre a comedy. The Japanese poster contains the setting of the movie, but the actor looks too comfortable on the bush, where he actually is not in the movie. The Italian and US posters are doing a better job at capturing the man's struggle to survive. The actor appears naked in both of the posters, and in action to survive on the island. </p>
 		</div>
 
 		<div class="back">
