--- a/6_obsession/page4.html
+++ b/6_obsession/page4.html
@@ -41,7 +41,7 @@
 			</p>
 			<br>
 			<h3 class="bold"> Posters </h3>
-			<p class="regular"> The Korean version  </p>
+			<p class="regular"> The Korean version of the poster is divided into six sections that each contains actors of the film. The Korean poster is implying six different stories to survive. However, the US version looks too much like a horror film to be 	accurately representing the movie Flu.  </p>
 		</div>
 
 		<div class="back">
