--- a/6_obsession/page5.html
+++ b/6_obsession/page5.html
@@ -41,7 +41,7 @@
 			</p>
 			<br>
 			<h3 class="bold"> Posters </h3>
-			<p class="regular"> The Korean version  </p>
+			<p class="regular"> The Korean version of the poster looks as if the two actors are having a battle of wits. The typography of the title reminds me of a historical movie where actors are wearing Korean traditional costumes. The U.S. version of the poster is capturing the image of rough action and ambition of a man. Also, the typography of the title is rough yet modern with the thin slices within the alphabets. The U.S. version seems more successful at accurately representing the film For The Emperor. </p>
 		</div>
 
 		<div class="back">
