--- a/6_obsession/page6.html
+++ b/6_obsession/page6.html
@@ -47,7 +47,7 @@
 			</p>
 			<br>
 			<h3 class="bold"> Posters </h3>
-			<p class="regular"> The Korean version  </p>
+			<p class="regular"> The Korean version of the poster is capturing the four main actors of the movie. It is interesting how the position of their hands is used to imply the relationship among the four. I also love the typography used for title of the movie. It is classic, yet not outdated as a design. The design of the poster used abroad does not contain any photo. The poster is illustrated with oriental painting of trees and characters that are hinting the plot of the movie. The two versions of the poster give off different mood, but both are accurate and successful at depicting the mood of the film. </p>
 		</div>
 
 
