--- a/6_obsession/page7.html
+++ b/6_obsession/page7.html
@@ -42,7 +42,7 @@
 			</p>
 			<br>
 			<h3 class="bold"> Posters </h3>
-			<p class="regular"> The Korean version  </p>
+			<p class="regular"> The Korean version of the poster contain the image of the two main actors. Their eyes are filled with anger and vengeance. The viewers can predict the conflict between the two actors from the Korean poster. The U.S. version of the poster captures the image from the movie. The setting is from one of the beginning scenes of the movie, but the face of the man holding the ax is hidden. It is brilliant how the face of the man is hidden behind the title of the movie, letting the viewers to decide who is the devil.  </p>
 		</div>
 
 
