--- a/6_obsession/page8.html
+++ b/6_obsession/page8.html
@@ -42,7 +42,10 @@
 			</p>
 			<br>
 			<h3 class="bold"> Posters </h3>
-			<p class="regular"> The Korean version  </p>
+			<p class="regular"> The Korean version of the poster is using a black and white image of the two main actors. The man on the left is holding a cigarette and the one on the right is looking directly at the camera with an intense face expression. The text on the right upper corener says, "In 1986, at the country side, it was first time for both detectives." From the poster the viewers can predict a serious crime is involved in the movie. 
+			<br>
+			<br>
+			The US version of the poster contains an image of a scarecrow covered in fabrics with blood. The title of the movie is written in bold sans serif that contains an image of what appears to be a murdered woman. The elements used in poster are scary and imply murder. Also, there is a text that says, "Based on the true story of South Korea's most notorious killer..." for the foreign audience. Overall, I like the Korean poster better because it is not too direct and makes audience curious of what will happen in the movie. </p>
 		</div>
 
 		<div class="next">
