--- a/6_obsession/page9.html
+++ b/6_obsession/page9.html
@@ -42,7 +42,7 @@
 			</p>
 			<br>
 			<h3 class="bold"> Posters </h3>
-			<p class="regular"> The Korean version  </p>
+			<p class="regular"> The Korean version of the poster is using an image of five main actors and a child actress. The text on the very top of the poster reads, "A weirdo came into cell No.7" All of the actors are in unique action. The poster gives off light and fun mood. The Japanese version of the poster is more sentimental. It focuses on the relationship of the father and the daughter by using the image of the two. I believe the Japanese version is more successful at portraying overall plot of the movie. It is about the relationship and heart warming story of the father and the daughter.  </p>
 		</div>
 
 		<div class="next">
