--- a/6_obsession/page3.html
+++ b/6_obsession/page3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Coinlocker Girl</title>
+	<title>Coin Locker Girl</title>
 	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css">
 </head>
@@ -10,7 +10,7 @@
 			<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
 		</div>
 		
-		<div class="movietitle"> Coinlocker Girl </div>
+		<div class="movietitle"> Coin Locker Girl </div>
 
 		<div class="centeredposter"> 
 			<p style="text-align: center;"> <img src="assets/imgs/3_3.png" alt="Korean Version" style="width: 50%;"> </p>
@@ -30,18 +30,21 @@
 
 		<div class="white">
 			<h3 class="bold"> Title </h3>
-			<p class="regular"> A Hard Day </p>
+			<p class="regular"> Coin Locker Girl </p>
 			<br>
 			<h3 class="bold"> Director </h3>
-			<p class="regular">Kim Seong-hun</p>	
+			<p class="regular">Han Jun-hee</p>	
 			<br>
 			<h3 class="bold"> Plot </h3>
 			<p class="regular"> 
-				Ko, a corrupt detective whose mother recently died, drives away in the middle of the funeral, having been informed that his squad is being investigated by internal affairs for bribery. He crashes into a homeless man who wanders onto the road, killing him. Fearing manslaughter charges, as he is intoxicated, Ko declines to call the police, and hides the body from a passing patrol car. With the body in his trunk, he returns to the funeral and manages to seal the body into his mother's coffin while escaping detection. A few days later, Ko purposely gets into another crash, which conceals the earlier damage and gives him a reason to visit the repair shop. To the fortune of Ko and his squad, the aforementioned investigation is cancelled by a lieutenant named Park. 
+				A baby is found abandoned inside a coin locker at Western Seoul train station in 1996. A beggar takes her and names her Il-young (Kim Go-eun), then when she turns 10, she is taken by the corrupt detective who sells her off to a woman referred to simply as Mother as part of his loan payment (Kim Hye-soo). Mother is the boss of a loan shark and organ trafficking crime ring in Chinatown, Incheon; she has held on to her position of power by being dispassionate and calculating, and by keeping by her side only those of use to her. Mother decides to raise the young child after she shows toughness and smarts, eventually grooming her for a position in her organization as her personal debt collector. 
+				<br>
+				<br>
+				One day, Il-young is given a task to collect debt from Suk-hyun (Park Bo-gum), the son of a debtor. Over the course of a few days, she is initially taken back by the boy who is not afraid of her and shows her kindness and openness from his own struggles from the past and current with unyielding spirit that she starts to develop special feelings for him. But when his father flees from the debt, Mother orders her to kill Suk-hyun. Il-young cannot go through with it and by making that single choice, she must now flee from the only family she has ever known.
 			</p>
 			<br>
 			<h3 class="bold"> Posters </h3>
-			<p class="regular"> The Korean version  </p>
+			<p class="regular"> The Korean title of this movie is "Chinatown", and it is somehow translated into "Coin Locker Girl". The Korean version of the poster is focusing on the main actress who is one of the most famous celebrity in Korea. On the U.S. version of the poster, I like how the setting matches the title of the movie "Coin Locker Girl". The coinlockers are usually placed in the subway stations. The actress' solitude is well illustrated on the poster as others are busy walking toward their destination. </p>
 		</div>
 
 		<div class="back">
