--- a/6_obsession/index.html
+++ b/6_obsession/index.html
@@ -11,47 +11,194 @@
 
 		
 	<div class="flex-container">
-		<div>
-			<div><a href="page1.html">A Hard Day</a></div>
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page1.html" class="poster-stack-title">A Hard Day</a>
+			</div>
 		</div>
-		<div><a href="page2.html">Castaway On The Moon</a></div>
-		<div><a href="page3.html">Coinlocker</a></div>
-		<div><a href="page4.html">Flu</a></div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item poster-stack-item-2"></div>
+			<div class="poster-stack-item poster-stack-item-3"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-4">
+				<a href="page2.html" class="poster-stack-title">Castaway On The Moon</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page3.html" class="poster-stack-title">Coin Locker Girl</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page4.html" class="poster-stack-title">Flu</a>
+			</div>
+		</div>
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page5.html">For The Emperor</a></div>
-		<div><a href="page6.html">Handmaiden</a></div>
-		<div><a href="page7.html">I Saw <br> The Devil</a></div>
-		<div><a href="page8.html">Memories <br> Of Murder</a></div>
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page5.html" class="poster-stack-title">For The Emperor</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page6.html" class="poster-stack-title">Handmaiden</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page7.html" class="poster-stack-title">I Saw <br> The Devil</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page8.html" class="poster-stack-title">Memories <br> Of Murder</a>
+			</div>
+		</div>
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page9.html">Miracle In <br> Cell No.7</a></div>
-		<div><a href="page10.html">Miss Granny</a></div>
-		<div><a href="page11.html">Mother</a></div>
-		<div><a href="page12.html">Oasis</a></div>
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page9.html" class="poster-stack-title">Miracle In <br> Cell No.7</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page10.html" class="poster-stack-title">Miss Granny</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page11.html" class="poster-stack-title">Mother</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item poster-stack-item-2"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-3">
+				<a href="page12.html" class="poster-stack-title">Oasis</a>
+			</div>
+		</div>
 	</div>
 		
 	<div class="flex-container">	
-		<div><a href="page13.html">Obsessed</a></div>
-		<div><a href="page14.html">Ode To <br> My Father</a></div>
-		<div><a href="page15.html">Office</a></div>
-		<div><a href="page16.html">Oldboy</a></div>
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page13.html" class="poster-stack-title">Obsessed</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page14.html" class="poster-stack-title">Ode To <br> My Father</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page15.html" class="poster-stack-title">Office</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item poster-stack-item-2"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-3">
+				<a href="page16.html" class="poster-stack-title">Oldboy</a>
+			</div>
+		</div>		
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page17.html">Poetry</a></div>
-		<div><a href="page18.html">Sector 7</a></div>
-		<div><a href="page19.html">Seopyonje</a></div>
-		<div><a href="page20.html">Sympathy <br> For Lady Vengeance</a></div>
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item poster-stack-item-2"></div>
+			<div class="poster-stack-item poster-stack-item-3"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-4">
+				<a href="page17.html" class="poster-stack-title">Poetry</a>
+			</div>
+		</div>		
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page18.html" class="poster-stack-title">Sector 7</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page19.html" class="poster-stack-title">Seopyonje</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item poster-stack-item-2"></div>
+			<div class="poster-stack-item poster-stack-item-3"></div>
+			<div class="poster-stack-item poster-stack-item-4"></div>
+			<div class="poster-stack-item poster-stack-item-5"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-6">
+				<a href="page20.html" class="poster-stack-title">Sympathy <br> For Lady Vengeance</a>
+			</div>
+		</div>
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page21.html">The <br> Classified File</a></div>
-		<div><a href="page22.html">The <br> Concubine</a></div>
-		<div><a href="page23.html">The <br> Front Line</a></div>
-		<div><a href="page24.html">The Good <br> The Bad <br> The Weird</a></div>
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page21.html" class="poster-stack-title">The <br> Classified File</a>
+			</div>
+		</div>
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page22.html" class="poster-stack-title">The <br> Concubine</a>
+			</div>
+		</div>	
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-2">
+				<a href="page23.html" class="poster-stack-title">The <br> Front Line</a>
+			</div>
+		</div>	
+
+		<div class="poster-stack">
+			<div class="poster-stack-item poster-stack-item-1"></div>
+			<div class="poster-stack-item poster-stack-item-2"></div>
+			<div class="poster-stack-item-with-title poster-stack-item poster-stack-item-3">
+				<a href="page24.html" class="poster-stack-title">The Good <br> The Bad <br> The Weird</a>
+			</div>
+		</div>	
 	</div>
 
 	<div class="flex-container">
